--- a/po/en_GB/grant.po
+++ b/po/en_GB/grant.po
@@ -3,15 +3,15 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# Andi Chandler <andi@gowling.com>, 2013,2015
+# Andi Chandler <andi@gowling.com>, 2013,2015-2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-04-25 16:54-0400\n"
-"PO-Revision-Date: 2015-05-31 21:08+0000\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-16 10:48+0000\n"
 "Last-Translator: Andi Chandler <andi@gowling.com>\n"
-"Language-Team: English (United Kingdom) (http://www.transifex.com/projects/p/civicrm/language/en_GB/)\n"
+"Language-Team: English (United Kingdom) (http://www.transifex.com/civicrm/civicrm/language/en_GB/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -37,14 +37,6 @@ msgstr "Grant Due Date is NULL"
 #: CRM/Grant/BAO/Query.php
 msgid "Grant Decision Date is NULL"
 msgstr "Grant Decision Date is NULL"
-
-#: CRM/Grant/BAO/Query.php
-msgid "Grant Type %2 %1"
-msgstr "Grant Type %2 %1"
-
-#: CRM/Grant/BAO/Query.php
-msgid "Grant Status %2 %1"
-msgstr "Grant Status %2 %1"
 
 #: CRM/Grant/BAO/Query.php
 msgid "App. Received Date - From"
@@ -91,10 +83,6 @@ msgid "Grant report received"
 msgstr "Grant report received"
 
 #: CRM/Grant/DAO/Grant.php
-msgid "Grant Type Id"
-msgstr "Grant Type Id"
-
-#: CRM/Grant/DAO/Grant.php
 msgid "Amount granted"
 msgstr "Amount granted"
 
@@ -106,10 +94,6 @@ msgstr "Grant Currency"
 msgid "Grant Rationale"
 msgstr "Grant Rationale"
 
-#: CRM/Grant/DAO/Grant.php
-msgid "Grant Status Id"
-msgstr "Grant Status ID"
-
 #: CRM/Grant/Form/Grant.php templates/CRM/Grant/Form/GrantView.tpl
 msgid "Grant Report Received?"
 msgstr "Grant Report Received?"
@@ -117,6 +101,10 @@ msgstr "Grant Report Received?"
 #: CRM/Grant/Form/Grant.php
 msgid "Amount Requested<br />(original currency)"
 msgstr "Amount Requested<br />(original currency)"
+
+#: CRM/Grant/Form/Grant.php
+msgid "Applicant"
+msgstr "Applicant"
 
 #: CRM/Grant/Form/Search.php
 msgid "Find Grants"
@@ -127,12 +115,10 @@ msgid "Delete Grants"
 msgstr "Delete Grants"
 
 #: CRM/Grant/Form/Task/Delete.php
-msgid "Deleted Grant(s): %1"
-msgstr "Deleted Grant(s): %1"
-
-#: CRM/Grant/Form/Task/Delete.php CRM/Grant/Form/Task/Update.php
-msgid "Total Selected Grant(s): %1"
-msgstr "Total Selected Grant(s): %1"
+msgid "%count grant deleted."
+msgid_plural "%count grants deleted."
+msgstr[0] "%count grant deleted."
+msgstr[1] "%count grants deleted."
 
 #: CRM/Grant/Form/Task/Print.php
 msgid "Print Grant List"
@@ -143,30 +129,46 @@ msgid "Update Grants"
 msgstr "Update Grants"
 
 #: CRM/Grant/Form/Task/Update.php
-msgid "Updated Grant(s): %1"
-msgstr "Updated Grant(s): %1"
+msgid "Updated Grant(s): %1 (Total Selected: %2)"
+msgstr "Updated Grant(s): %1 (Total Selected: %2)"
+
+#: CRM/Grant/Info.php
+msgid "access CiviGrant"
+msgstr "access CiviGrant"
+
+#: CRM/Grant/Info.php
+msgid "View all grants"
+msgstr "View all grants"
+
+#: CRM/Grant/Info.php
+msgid "edit grants"
+msgstr "edit grants"
+
+#: CRM/Grant/Info.php
+msgid "Create and update grants"
+msgstr "Create and update grants"
+
+#: CRM/Grant/Info.php
+msgid "delete in CiviGrant"
+msgstr "delete in CiviGrant"
+
+#: CRM/Grant/Info.php
+msgid "Delete grants"
+msgstr "Delete grants"
 
 #: CRM/Grant/Page/DashBoard.php
 msgid "grants"
 msgstr "grants"
 
-#: CRM/Grant/Page/Tab.php
-msgid "Grant by"
-msgstr "Grant by"
-
-#: CRM/Grant/Selector/Search.php templates/CRM/Grant/Form/GrantView.tpl
+#: CRM/Grant/Selector/Search.php
 msgid "View Grant"
 msgstr "View Grant"
 
-#: CRM/Grant/Selector/Search.php templates/CRM/Grant/Form/Grant.tpl
+#: CRM/Grant/Selector/Search.php
 msgid "Edit Grant"
 msgstr "Edit Grant"
 
 #: CRM/Grant/Selector/Search.php
-msgid "Are you sure you want to delete this grant?"
-msgstr "Are you sure you want to delete this grant?"
-
-#: CRM/Grant/Selector/Search.php templates/CRM/Grant/Form/Grant.tpl
 msgid "Delete Grant"
 msgstr "Delete Grant"
 
@@ -179,16 +181,8 @@ msgid "Granted"
 msgstr "Granted"
 
 #: CRM/Grant/Task.php
-msgid "Print Grants"
-msgstr "Print Grants"
-
-#: CRM/Grant/Task.php
 msgid "Export Grants"
 msgstr "Export Grants"
-
-#: templates/CRM/Grant/Form/Grant.tpl
-msgid "New Grant"
-msgstr "New Grant"
 
 #: templates/CRM/Grant/Form/Grant.tpl
 msgid "Are you sure you want to delete this Grant?"
@@ -209,6 +203,14 @@ msgstr "Date on which the grant money was transferred."
 #: templates/CRM/Grant/Form/GrantView.tpl
 msgid "(original currency)"
 msgstr "(original currency)"
+
+#: templates/CRM/Grant/Form/Search/Common.tpl
+msgid "Grant Status(s)"
+msgstr "Grant Status(s)"
+
+#: templates/CRM/Grant/Form/Search/Common.tpl
+msgid "Grant Type(s)"
+msgstr "Grant Type(s)"
 
 #: templates/CRM/Grant/Form/Search/Common.tpl
 msgid "Date is not set"
@@ -302,61 +304,17 @@ msgid "This page lists all grants for %1 since inception."
 msgstr "This page lists all grants for %1 since inception."
 
 #: templates/CRM/Grant/Page/Tab.tpl
-msgid ""
-"Click <a accesskey='N' href='%1'>Add Grant</a> to record a Grant for this "
-"contact."
-msgstr "Click <a accesskey='N' href='%1'>Add Grant</a> to record a Grant for this contact."
+msgid "Click <a %1>Add Grant</a> to record a Grant for this contact."
+msgstr "Click <a %1>Add Grant</a> to record a Grant for this contact."
 
 #: templates/CRM/Grant/Page/Tab.tpl
 msgid "No grants have been recorded for this contact."
 msgstr "No grants have been recorded for this contact."
 
-#: CRM/Grant/Form/Grant.php
-msgid "Applicant"
-msgstr "Applicant"
+#: CRM/Grant/Task.php
+msgid "Export grants"
+msgstr "Export grants"
 
-#: CRM/Grant/Form/Task/Update.php
-msgid "Updated Grant(s): %1 (Total Selected: %2)"
-msgstr "Updated Grant(s): %1 (Total Selected: %2)"
-
-#: templates/CRM/Grant/Page/Tab.tpl
-msgid "Click <a %1>Add Grant</a> to record a Grant for this contact."
-msgstr "Click <a %1>Add Grant</a> to record a Grant for this contact."
-
-#: CRM/Grant/Form/Task/Delete.php
-msgid "%count grant deleted."
-msgid_plural "%count grants deleted."
-msgstr[0] "%count grant deleted."
-msgstr[1] "%count grants deleted."
-
-#: CRM/Grant/Info.php
-msgid "access CiviGrant"
-msgstr "access CiviGrant"
-
-#: CRM/Grant/Info.php
-msgid "View all grants"
-msgstr "View all grants"
-
-#: CRM/Grant/Info.php
-msgid "edit grants"
-msgstr "edit grants"
-
-#: CRM/Grant/Info.php
-msgid "Create and update grants"
-msgstr "Create and update grants"
-
-#: CRM/Grant/Info.php
-msgid "delete in CiviGrant"
-msgstr "delete in CiviGrant"
-
-#: CRM/Grant/Info.php
-msgid "Delete grants"
-msgstr "Delete grants"
-
-#: templates/CRM/Grant/Form/Search/Common.tpl
-msgid "Grant Status(s)"
-msgstr "Grant Status(s)"
-
-#: templates/CRM/Grant/Form/Search/Common.tpl
-msgid "Grant Type(s)"
-msgstr "Grant Type(s)"
+#: CRM/Grant/Task.php
+msgid "Update grants"
+msgstr "Update grants"
