--- a/po/en_GB/menu.po
+++ b/po/en_GB/menu.po
@@ -3,13 +3,13 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# Andi Chandler <andi@gowling.com>, 2015
+# Andi Chandler <andi@gowling.com>, 2015-2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-15 15:03+0000\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-16 10:52+0000\n"
 "Last-Translator: Andi Chandler <andi@gowling.com>\n"
 "Language-Team: English (United Kingdom) (http://www.transifex.com/civicrm/civicrm/language/en_GB/)\n"
 "MIME-Version: 1.0\n"
@@ -127,8 +127,8 @@ msgid "Case Activity"
 msgstr "Case Activity"
 
 msgctxt "menu"
-msgid "Case Report"
-msgstr "Case Report"
+msgid "Case Activity Audit"
+msgstr "Case Activity Audit"
 
 msgctxt "menu"
 msgid "Case Custom Set"
@@ -147,8 +147,8 @@ msgid "Assign to Another Client"
 msgstr "Assign to Another Client"
 
 msgctxt "menu"
-msgid "Build Activity To Case"
-msgstr "Build Activity To Case"
+msgid "File on Case"
+msgstr "File on Case"
 
 msgctxt "menu"
 msgid "Case Details"
@@ -172,10 +172,6 @@ msgstr "Case Statuses"
 msgctxt "menu"
 msgid "Encounter Mediums"
 msgstr "Encounter Mediums"
-
-msgctxt "menu"
-msgid "Change Activity Status"
-msgstr "Change Activity Status"
 
 msgctxt "menu"
 msgid "CiviContribute Dashboard"
@@ -250,6 +246,10 @@ msgctxt "menu"
 msgid "Financial Types"
 msgstr "Financial Types"
 
+msgctxt "menu"
+msgid "New Payment"
+msgstr "New Payment"
+
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Financial Accounts"
@@ -267,9 +267,15 @@ msgstr "Accepted Credit Cards"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Soft Credit Types"
+msgstr "Soft Credit Types"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Contributions"
 msgstr "Contributions"
 
+#: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Recurring Contributions"
 msgstr "Recurring Contributions"
@@ -320,6 +326,23 @@ msgstr "Accounting Batches"
 msgctxt "menu"
 msgid "Accounting Batch Export"
 msgstr "Accounting Batch Export"
+
+msgctxt "menu"
+msgid "View Payment"
+msgstr "View Payment"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "CiviContribute Component Settings"
+msgstr "CiviContribute Component Settings"
+
+msgctxt "menu"
+msgid "PDF Invoice"
+msgstr "PDF Invoice"
+
+msgctxt "menu"
+msgid "Email Invoice"
+msgstr "Email Invoice"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -473,6 +496,11 @@ msgstr "Search Preferences"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Date Preferences"
+msgstr "Date Preferences"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Navigation Menu"
 msgstr "Navigation Menu"
 
@@ -506,10 +534,6 @@ msgctxt "menu"
 msgid "Schedule Reminders"
 msgstr "Schedule Reminders"
 
-msgctxt "menu"
-msgid "This should never be seen"
-msgstr "This should never be seen"
-
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Preferred Communication Methods"
@@ -527,6 +551,11 @@ msgstr "Print Page (PDF) Formats"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Communication Style Options"
+msgstr "Communication Style Options"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Email Greeting Formats"
 msgstr "Email Greeting Formats"
 
@@ -540,9 +569,10 @@ msgctxt "menu"
 msgid "Addressee Formats"
 msgstr "Addressee Formats"
 
+#: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Languages, Currency, Location"
-msgstr "Languages, Currency, Location"
+msgid "Languages, Currency, Locations"
+msgstr "Languages, Currency, Locations"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -693,10 +723,6 @@ msgid "Administer CiviCRM"
 msgstr "Administer CiviCRM"
 
 msgctxt "menu"
-msgid "Option Values"
-msgstr "Option Values"
-
-msgctxt "menu"
 msgid "Price Sets"
 msgstr "Price Sets"
 
@@ -764,10 +790,6 @@ msgstr "Search Builder"
 msgctxt "menu"
 msgid "Custom Searches"
 msgstr "Custom Searches"
-
-msgctxt "menu"
-msgid "Simple Search"
-msgstr "Simple Search"
 
 msgctxt "menu"
 msgid "New Contact"
@@ -859,6 +881,10 @@ msgid "CiviCRM Blog"
 msgstr "CiviCRM Blog"
 
 msgctxt "menu"
+msgid "CiviCRM Getting Started"
+msgstr "CiviCRM Getting Started"
+
+msgctxt "menu"
 msgid "Case Dashlet"
 msgstr "Case Dashlet"
 
@@ -913,6 +939,10 @@ msgid "Import Activities"
 msgstr "Import Activities"
 
 msgctxt "menu"
+msgid "Import Multi-value Custom Data"
+msgstr "Import Multi-value Custom Data"
+
+msgctxt "menu"
 msgid "Upgrade CiviCRM"
 msgstr "Upgrade CiviCRM"
 
@@ -949,12 +979,16 @@ msgid "Browse Uploaded files"
 msgstr "Browse Uploaded files"
 
 msgctxt "menu"
-msgid "Delete file"
-msgstr "Delete file"
+msgid "Delete File"
+msgstr "Delete File"
 
 msgctxt "menu"
 msgid "Log out"
 msgstr "Log out"
+
+msgctxt "menu"
+msgid "CiviCRM API"
+msgstr "CiviCRM API"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -968,6 +1002,10 @@ msgstr "QUnit"
 msgctxt "menu"
 msgid "ProfileEditor"
 msgstr "ProfileEditor"
+
+msgctxt "menu"
+msgid "Confirm dates"
+msgstr "Confirm dates"
 
 msgctxt "menu"
 msgid "CiviCRM Profile Create"
@@ -1064,6 +1102,10 @@ msgid "Event Online Registration"
 msgstr "Event Online Registration"
 
 msgctxt "menu"
+msgid "Repeat Event"
+msgstr "Repeat Event"
+
+msgctxt "menu"
 msgid "Conference Slots"
 msgstr "Conference Slots"
 
@@ -1097,6 +1139,10 @@ msgstr "Remove From Cart"
 msgctxt "menu"
 msgid "View Cart"
 msgstr "View Cart"
+
+msgctxt "menu"
+msgid "Change Registration Selections"
+msgstr "Change Registration Selections"
 
 msgctxt "menu"
 msgid "CiviGrant Dashboard"
@@ -1151,8 +1197,8 @@ msgid "Resubscribe"
 msgstr "Resubscribe"
 
 msgctxt "menu"
-msgid "Optout"
-msgstr "Optout"
+msgid "Opt-out"
+msgstr "Opt-out"
 
 msgctxt "menu"
 msgid "Confirm"
@@ -1287,6 +1333,11 @@ msgstr "Reports Listing"
 msgctxt "menu"
 msgid "CiviCRM News"
 msgstr "CiviCRM News"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Getting Started"
+msgstr "Getting Started"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1425,6 +1476,16 @@ msgstr "Find Mass SMS"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "New A/B Test"
+msgstr "New A/B Test"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Manage A/B Tests"
+msgstr "Manage A/B Tests"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Membership Reports"
 msgstr "Membership Reports"
 
@@ -1530,11 +1591,6 @@ msgstr "Localization"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Languages, Currency, Locations"
-msgstr "Languages, Currency, Locations"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
 msgid "Preferred Language Options"
 msgstr "Preferred Language Options"
 
@@ -1552,6 +1608,11 @@ msgstr "Permissions (Access Control)"
 msgctxt "menu"
 msgid "System Settings"
 msgstr "System Settings"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Connections"
+msgstr "Connections"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1620,6 +1681,11 @@ msgstr "CiviGrant"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Grant Status"
+msgstr "Grant Status"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "CiviMember"
 msgstr "CiviMember"
 
@@ -1630,8 +1696,13 @@ msgstr "All Reports"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Help"
-msgstr "Help"
+msgid "Support"
+msgstr "Support"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Get started"
+msgstr "Get started"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1640,18 +1711,43 @@ msgstr "Documentation"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Community Forums"
-msgstr "Community Forums"
+msgid "Ask a question"
+msgstr "Ask a question"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Participate"
-msgstr "Participate"
+msgid "Get expert help"
+msgstr "Get expert help"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "About"
-msgstr "About"
+msgid "About CiviCRM"
+msgstr "About CiviCRM"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Register your site"
+msgstr "Register your site"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Join CiviCRM"
+msgstr "Join CiviCRM"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Developer"
+msgstr "Developer"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "API Explorer"
+msgstr "API Explorer"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Developer Docs"
+msgstr "Developer Docs"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1878,6 +1974,11 @@ msgstr "Provides transaction details for all contributions and payments, includi
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Provides information about the status of recurring contributions"
+msgstr "Provides information about the status of recurring contributions"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Membership Summary"
 msgstr "Membership Summary"
 
@@ -2047,144 +2148,69 @@ msgid ""
 "Detailed report for canvassing, phone-banking, walk lists or other surveys."
 msgstr "Detailed report for canvassing, phone-banking, walk lists or other surveys."
 
+#: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Case Activity Audit"
-msgstr "Case Activity Audit"
+msgid "Payment Methods"
+msgstr "Payment Methods"
 
 msgctxt "menu"
-msgid "New Payment"
-msgstr "New Payment"
+msgid "Configure CKEditor"
+msgstr "Configure CKEditor"
+
+msgctxt "menu"
+msgid "Batch Merge Duplicate Contacts"
+msgstr "Batch Merge Duplicate Contacts"
+
+msgctxt "menu"
+msgid "Insert CiviCRM Content"
+msgstr "Insert CiviCRM Content"
+
+msgctxt "menu"
+msgid "Self-service Registration Update"
+msgstr "Self-service Registration Update"
+
+msgctxt "menu"
+msgid "Self-service Registration Transfer"
+msgstr "Self-service Registration Transfer"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Soft Credit Types"
-msgstr "Soft Credit Types"
-
-msgctxt "menu"
-msgid "View Payment"
-msgstr "View Payment"
+msgid "System Status"
+msgstr "System Status"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Communication Style Options"
-msgstr "Communication Style Options"
-
-msgctxt "menu"
-msgid "Import Multi-value Custom Data"
-msgstr "Import Multi-value Custom Data"
-
-msgctxt "menu"
-msgid "Change Registration Selections"
-msgstr "Change Registration Selections"
+msgid "Components"
+msgstr "Components"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Grant Status"
-msgstr "Grant Status"
+msgid "Extensions"
+msgstr "Extensions"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Developer"
-msgstr "Developer"
+msgid "Activity Details"
+msgstr "Activity Details"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "API Explorer"
-msgstr "API Explorer"
+msgid "Activity Summary"
+msgstr "Activity Summary"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Developer Docs"
-msgstr "Developer Docs"
-
-msgctxt "menu"
-msgid "File on Case"
-msgstr "File on Case"
+msgid "Shows activity statistics by type / date"
+msgstr "Shows activity statistics by type / date"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "CiviContribute Component Settings"
-msgstr "CiviContribute Component Settings"
-
-msgctxt "menu"
-msgid "PDF Invoice"
-msgstr "PDF Invoice"
-
-msgctxt "menu"
-msgid "Email Invoice"
-msgstr "Email Invoice"
+msgid "Pledge Detail"
+msgstr "Pledge Detail"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Date Preferences"
-msgstr "Date Preferences"
-
-msgctxt "menu"
-msgid "Delete File"
-msgstr "Delete File"
-
-msgctxt "menu"
-msgid "CiviCRM API"
-msgstr "CiviCRM API"
-
-msgctxt "menu"
-msgid "Confirm dates"
-msgstr "Confirm dates"
-
-msgctxt "menu"
-msgid "Repeat Event"
-msgstr "Repeat Event"
-
-msgctxt "menu"
-msgid "Opt-out"
-msgstr "Opt-out"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "New A/B Test"
-msgstr "New A/B Test"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Manage A/B Tests"
-msgstr "Manage A/B Tests"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Support"
-msgstr "Support"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Get started"
-msgstr "Get started"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Ask a question"
-msgstr "Ask a question"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Get expert help"
-msgstr "Get expert help"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "About CiviCRM"
-msgstr "About CiviCRM"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Register your site"
-msgstr "Register your site"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Join CiviCRM"
-msgstr "Join CiviCRM"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Provides information about the status of recurring contributions"
-msgstr "Provides information about the status of recurring contributions"
+msgid ""
+"List of pledges including amount pledged, pledge status, next payment date, "
+"balance due, total amount paid etc."
+msgstr "List of pledges including amount pledged, pledge status, next payment date, balance due, total amount paid etc."
