--- a/po/en_US/batch.po
+++ b/po/en_US/batch.po
@@ -6,10 +6,10 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-03-14 17:45-0400\n"
-"PO-Revision-Date: 2015-03-14 21:59+0000\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:11+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
-"Language-Team: English (United States) (http://www.transifex.com/projects/p/civicrm/language/en_US/)\n"
+"Language-Team: English (United States) (http://www.transifex.com/civicrm/civicrm/language/en_US/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -31,6 +31,10 @@ msgstr "View/Add Transactions to Batch"
 #: CRM/Batch/BAO/Batch.php
 msgid "Re-open Batch"
 msgstr "Re-open Batch"
+
+#: CRM/Batch/BAO/Batch.php
+msgid "Delete Batch"
+msgstr "Delete Batch"
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Download Batch"
@@ -57,12 +61,52 @@ msgid "No export format selected."
 msgstr "No export format selected."
 
 #: CRM/Batch/DAO/Batch.php
-msgid "Exported Date"
-msgstr "Exported Date"
+msgid "Batch ID"
+msgstr "Batch ID"
 
-#: CRM/Batch/Form/Batch.php
-msgid "Number of items"
-msgstr "Number of items"
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Description"
+msgstr "Batch Description"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Created By"
+msgstr "Batch Created By"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Created Date"
+msgstr "Batch Created Date"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Modified By"
+msgstr "Batch Modified By"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Modified Date"
+msgstr "Batch Modified Date"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Smart Group"
+msgstr "Batch Smart Group"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Total"
+msgstr "Batch Total"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Number of Items"
+msgstr "Batch Number of Items"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Payment Instrument"
+msgstr "Batch Payment Instrument"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Exported Date"
+msgstr "Batch Exported Date"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Data"
+msgstr "Batch Data"
 
 #: CRM/Batch/Form/Batch.php
 msgid "Batch Deleted"
@@ -81,6 +125,10 @@ msgid "Batch Data Entry for Memberships"
 msgstr "Batch Data Entry for Memberships"
 
 #: CRM/Batch/Form/Entry.php
+msgid "Batch Data Entry for Pledge Payments"
+msgstr "Batch Data Entry for Pledge Payments"
+
+#: CRM/Batch/Form/Entry.php
 msgid "Ignore Mismatch & Process the Batch?"
 msgstr "Ignore Mismatch & Process the Batch?"
 
@@ -89,16 +137,16 @@ msgid "Validate & Process the Batch"
 msgstr "Validate & Process the Batch"
 
 #: CRM/Batch/Form/Entry.php
-msgid "Some fields have been excluded."
-msgstr "Some fields have been excluded."
-
-#: CRM/Batch/Form/Entry.php
 msgid "Soft credit amount should not be greater than the total amount"
 msgstr "Soft credit amount should not be greater than the total amount"
 
 #: CRM/Batch/Form/Entry.php
 msgid "Membership type is a required field."
 msgstr "Membership type is a required field."
+
+#: CRM/Batch/Form/Entry.php
+msgid "You can not record two payments for the same pledge in a single batch."
+msgstr "You can not record two payments for the same pledge in a single batch."
 
 #: CRM/Batch/Form/Entry.php templates/CRM/Batch/Form/Entry.tpl
 msgid ""
@@ -147,6 +195,10 @@ msgstr "Total amount expected"
 msgid "Total amount entered"
 msgstr "Total amount entered"
 
+#: templates/CRM/Batch/Form/Entry.tpl
+msgid "Open Pledges (Due Date - Amount)"
+msgstr "Open Pledges (Due Date - Amount)"
+
 #: templates/CRM/Batch/Form/Search.tpl
 msgid "Data Entry Batches"
 msgstr "Data Entry Batches"
@@ -168,65 +220,36 @@ msgid "No Data Entry Batches have been created for this site."
 msgstr "No Data Entry Batches have been created for this site."
 
 #: CRM/Batch/DAO/Batch.php
-msgid "Batch ID"
-msgstr "Batch ID"
+msgid "Batch Payment Method"
+msgstr "Batch Payment Method"
 
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Title"
-msgstr "Batch Title"
+#: CRM/Batch/DAO/EntityBatch.php
+msgid "EntityBatch ID"
+msgstr "EntityBatch ID"
 
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Description"
-msgstr "Batch Description"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Created By"
-msgstr "Batch Created By"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Created Date"
-msgstr "Batch Created Date"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Modified By"
-msgstr "Batch Modified By"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Modified Date"
-msgstr "Batch Modified Date"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Smart Group"
-msgstr "Batch Smart Group"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Total"
-msgstr "Batch Total"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Number of Items"
-msgstr "Batch Number of Items"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Payment Instrument"
-msgstr "Batch Payment Instrument"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Exported Date"
-msgstr "Batch Exported Date"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Data"
-msgstr "Batch Data"
+#: CRM/Batch/DAO/EntityBatch.php
+msgid "EntityBatch Table"
+msgstr "EntityBatch Table"
 
 #: CRM/Batch/Form/Entry.php
-msgid "Batch Data Entry for Pledge Payments"
-msgstr "Batch Data Entry for Pledge Payments"
-
-#: CRM/Batch/Form/Entry.php
-msgid "You can not record two payments for the same pledge in a single batch."
-msgstr "You can not record two payments for the same pledge in a single batch."
+msgid ""
+"File or Autocomplete-Select type field(s) in the selected profile are not "
+"supported for Update multiple records."
+msgstr "File or Autocomplete-Select type field(s) in the selected profile are not supported for Update multiple records."
 
 #: templates/CRM/Batch/Form/Entry.tpl
-msgid "Open Pledges (Due Date - Amount)"
-msgstr "Open Pledges (Due Date - Amount)"
+msgid ""
+"Click Validate & Process below when you've entered all items for the batch. "
+"You can also Save & Continue Later at any time."
+msgstr "Click Validate & Process below when you've entered all items for the batch. You can also Save & Continue Later at any time."
+
+#: templates/CRM/Batch/Form/Entry.tpl
+msgid ""
+"Add, remove or change the order of columns by editing the corresponding <a "
+"href=\"%1\" target=\"_blank\">Bulk Entry profile</a>."
+msgstr "Add, remove or change the order of columns by editing the corresponding <a href=\"%1\" target=\"_blank\">Bulk Entry profile</a>."
+
+#: templates/CRM/Batch/Form/Entry.tpl
+msgid ""
+"Custom fields and a Personal Campaign Page field can be added if needed."
+msgstr "Custom fields and a Personal Campaign Page field can be added if needed."
