--- a/po/en_US/queue.po
+++ b/po/en_US/queue.po
@@ -1,4 +1,4 @@
-# Copyright CiviCRM LLC (c) 2004-2011
+# Copyright CiviCRM LLC (c) 2004-2015
 # This file is distributed under the same license as the CiviCRM package.
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
@@ -6,15 +6,15 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"Report-Msgid-Bugs-To: http://issues.civicrm.org/\n"
-"POT-Creation-Date: 2012-07-24 15:34-0400\n"
-"PO-Revision-Date: 2012-07-24 20:42+0000\n"
-"Language-Team: CiviCRM Translators <civicrm-translators@lists.civicrm.org>\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:11+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"Language-Team: English (United States) (http://www.transifex.com/civicrm/civicrm/language/en_US/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: en_US\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: CRM/Queue/DAO/QueueItem.php
 msgid "Queue Name"
@@ -35,3 +35,7 @@ msgstr "Queue item datas"
 #: CRM/Queue/Runner.php
 msgid "Queue Runner"
 msgstr "Queue Runner"
+
+#: CRM/Queue/DAO/QueueItem.php
+msgid "Queue ID"
+msgstr "Queue ID"
