--- a/po/en_GB/queue.po
+++ b/po/en_GB/queue.po
@@ -1,18 +1,18 @@
-# Copyright CiviCRM LLC (c) 2004-2012
+# Copyright CiviCRM LLC (c) 2004-2015
 # This file is distributed under the same license as the CiviCRM package.
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# Andi Chandler <andi@gowling.com>, 2013
+# Andi Chandler <andi@gowling.com>, 2013,2016
+# Graham <graham@mc3.coop>, 2013
 # Graham <graham@mc3.coop>, 2013
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"Report-Msgid-Bugs-To: http://issues.civicrm.org/\n"
-"POT-Creation-Date: 2013-05-31 09:06-0400\n"
-"PO-Revision-Date: 2013-07-08 22:20+0000\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-16 10:50+0000\n"
 "Last-Translator: Andi Chandler <andi@gowling.com>\n"
-"Language-Team: English (United Kingdom) (http://www.transifex.com/projects/p/civicrm/language/en_GB/)\n"
+"Language-Team: English (United Kingdom) (http://www.transifex.com/civicrm/civicrm/language/en_GB/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -38,3 +38,7 @@ msgstr "Queue item data"
 #: CRM/Queue/Runner.php
 msgid "Queue Runner"
 msgstr "Queue Runner"
+
+#: CRM/Queue/DAO/QueueItem.php
+msgid "Queue ID"
+msgstr "Queue ID"
