po: update po/es_ES/batch.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/es_ES/batch.po
+++ b/po/es_ES/batch.po
@@ -12,10 +12,10 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-04-25 16:54-0400\n"
-"PO-Revision-Date: 2015-06-26 14:26+0000\n"
-"Last-Translator: Marti <m.prat@ixiam.com>\n"
-"Language-Team: Spanish (http://www.transifex.com/projects/p/civicrm/language/es/)\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:11+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -37,6 +37,10 @@ msgstr "Ver / añadir transacciones en lote "
 #: CRM/Batch/BAO/Batch.php
 msgid "Re-open Batch"
 msgstr "Reabrir lote"
+
+#: CRM/Batch/BAO/Batch.php
+msgid "Delete Batch"
+msgstr ""
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Download Batch"
@@ -63,12 +67,52 @@ msgid "No export format selected."
 msgstr "Formato de No exportar elegido."
 
 #: CRM/Batch/DAO/Batch.php
-msgid "Exported Date"
-msgstr "Fecha de exportación"
+msgid "Batch ID"
+msgstr "ID del Lote"
 
-#: CRM/Batch/Form/Batch.php
-msgid "Number of items"
-msgstr "Número de items"
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Description"
+msgstr "Descripción del Lote"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Created By"
+msgstr "Lote Creado Por"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Created Date"
+msgstr "Fecha de Creación del Lote"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Modified By"
+msgstr "Lote Modificado Por"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Modified Date"
+msgstr "Fecha de modificación del Lote"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Smart Group"
+msgstr "Grupo Inteligente del Lote"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Total"
+msgstr "Total del Lote"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Number of Items"
+msgstr "Número de items del Lote"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Payment Instrument"
+msgstr "Instrumento de Pago del Lote"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Exported Date"
+msgstr "Fecha de Exportación del Lote"
+
+#: CRM/Batch/DAO/Batch.php
+msgid "Batch Data"
+msgstr "Data del Lote"
 
 #: CRM/Batch/Form/Batch.php
 msgid "Batch Deleted"
@@ -87,6 +131,10 @@ msgid "Batch Data Entry for Memberships"
 msgstr "Ingreso masivo de datos para membresías"
 
 #: CRM/Batch/Form/Entry.php
+msgid "Batch Data Entry for Pledge Payments"
+msgstr "Entrada de datos en lote para Compromisos de pago"
+
+#: CRM/Batch/Form/Entry.php
 msgid "Ignore Mismatch & Process the Batch?"
 msgstr "¿Ignorar no coincidencia y procesar el lote?"
 
@@ -95,16 +143,16 @@ msgid "Validate & Process the Batch"
 msgstr "Validar y procesar el lote"
 
 #: CRM/Batch/Form/Entry.php
-msgid "Some fields have been excluded."
-msgstr "Algunos campos han sido excluidos."
-
-#: CRM/Batch/Form/Entry.php
 msgid "Soft credit amount should not be greater than the total amount"
 msgstr "La cantidad del crédito blando «soft-credit» no puede ser mayor que la cantidad total"
 
 #: CRM/Batch/Form/Entry.php
 msgid "Membership type is a required field."
 msgstr "Se requiere un campo de tipo de membresía"
+
+#: CRM/Batch/Form/Entry.php
+msgid "You can not record two payments for the same pledge in a single batch."
+msgstr "No es posible grabar dos pagos para el mismo compromiso en un sólo lote."
 
 #: CRM/Batch/Form/Entry.php templates/CRM/Batch/Form/Entry.tpl
 msgid ""
@@ -153,6 +201,10 @@ msgstr "Cantidad total esperada"
 msgid "Total amount entered"
 msgstr "Cantidad total ingresada"
 
+#: templates/CRM/Batch/Form/Entry.tpl
+msgid "Open Pledges (Due Date - Amount)"
+msgstr "Compromisos abiertos (Fecha de vencimiento - Cantidad)"
+
 #: templates/CRM/Batch/Form/Search.tpl
 msgid "Data Entry Batches"
 msgstr "Lotes de ingresos de datos"
@@ -174,65 +226,36 @@ msgid "No Data Entry Batches have been created for this site."
 msgstr "No han sido creados lotes de ingreso de datos para este sitio.  "
 
 #: CRM/Batch/DAO/Batch.php
-msgid "Batch ID"
-msgstr "ID del Lote"
+msgid "Batch Payment Method"
+msgstr ""
 
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Title"
-msgstr "Nombre del Lote"
+#: CRM/Batch/DAO/EntityBatch.php
+msgid "EntityBatch ID"
+msgstr ""
 
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Description"
-msgstr "Descripción del Lote"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Created By"
-msgstr "Lote Creado Por"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Created Date"
-msgstr "Fecha de Creación del Lote"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Modified By"
-msgstr "Lote Modificado Por"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Modified Date"
-msgstr "Fecha de modificación del Lote"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Smart Group"
-msgstr "Grupo Inteligente del Lote"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Total"
-msgstr "Total del Lote"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Number of Items"
-msgstr "Número de items del Lote"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Payment Instrument"
-msgstr "Instrumento de Pago del Lote"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Exported Date"
-msgstr "Fecha de Exportación del Lote"
-
-#: CRM/Batch/DAO/Batch.php
-msgid "Batch Data"
-msgstr "Data del Lote"
+#: CRM/Batch/DAO/EntityBatch.php
+msgid "EntityBatch Table"
+msgstr ""
 
 #: CRM/Batch/Form/Entry.php
-msgid "Batch Data Entry for Pledge Payments"
-msgstr "Entrada de datos en lote para Compromisos de pago"
-
-#: CRM/Batch/Form/Entry.php
-msgid "You can not record two payments for the same pledge in a single batch."
-msgstr "No es posible grabar dos pagos para el mismo compromiso en un sólo lote."
+msgid ""
+"File or Autocomplete-Select type field(s) in the selected profile are not "
+"supported for Update multiple records."
+msgstr ""
 
 #: templates/CRM/Batch/Form/Entry.tpl
-msgid "Open Pledges (Due Date - Amount)"
-msgstr "Compromisos abiertos (Fecha de vencimiento - Cantidad)"
+msgid ""
+"Click Validate & Process below when you've entered all items for the batch. "
+"You can also Save & Continue Later at any time."
+msgstr ""
+
+#: templates/CRM/Batch/Form/Entry.tpl
+msgid ""
+"Add, remove or change the order of columns by editing the corresponding <a "
+"href=\"%1\" target=\"_blank\">Bulk Entry profile</a>."
+msgstr ""
+
+#: templates/CRM/Batch/Form/Entry.tpl
+msgid ""
+"Custom fields and a Personal Campaign Page field can be added if needed."
+msgstr ""
