po: update po/en_US/extension.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/en_US/extension.po
+++ b/po/en_US/extension.po
@@ -6,8 +6,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:11+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: English (United States) (http://www.transifex.com/civicrm/civicrm/language/en_US/)\n"
 "MIME-Version: 1.0\n"
@@ -25,11 +25,6 @@ msgid ""
 "Your extensions cache directory (%1) is not web server writable. Please go "
 "to the <a href=\"%2\">path setting page</a> and correct it.<br/>"
 msgstr "Your extensions cache directory (%1) is not web server writable. Please go to the <a href=\"%2\">path setting page</a> and correct it.<br/>"
-
-#: CRM/Extension/Browser.php
-msgid ""
-"Not checking remote URL for extensions since ext_repo_url is set to false."
-msgstr "Not checking remote URL for extensions since ext_repo_url is set to false."
 
 #: CRM/Extension/Browser.php
 msgid ""
@@ -51,10 +46,6 @@ msgid ""
 "compatible, you may be able to <a href=\"%3\">download and install "
 "extensions manually</a> (depending on access to your web server).<br />"
 msgstr "There are currently no extensions on the CiviCRM public extension directory which are compatible with version %2 (<a href=\"%1\">requested extensions from here</a>). If you want to install an extension which is not marked as compatible, you may be able to <a href=\"%3\">download and install extensions manually</a> (depending on access to your web server).<br />"
-
-#: CRM/Extension/Browser.php
-msgid "No Extensions Available for this Version"
-msgstr "No Extensions Available for this Version"
 
 #: CRM/Extension/Container/Basic.php CRM/Extension/Container/Default.php
 msgid "Invalid Base Directory"
@@ -112,6 +103,13 @@ msgid ""
 msgstr "You will not be able to install extensions at this time because your installation of PHP does not support ZIP archives. Please ask your system administrator to install the standard PHP-ZIP extension."
 
 #: CRM/Extension/Downloader.php
+msgid ""
+"WARNING: The downloader may be unable to download files which require HTTP "
+"redirection. This may be a configuration issue with PHP's open_basedir or "
+"safe_mode."
+msgstr "WARNING: The downloader may be unable to download files which require HTTP redirection. This may be a configuration issue with PHP's open_basedir or safe_mode."
+
+#: CRM/Extension/Downloader.php
 msgid "Unable to extract the extension: bad directory structure"
 msgstr "Unable to extract the extension: bad directory structure"
 
@@ -155,9 +153,13 @@ msgid ""
 "will be preserved, but the new copy will be used."
 msgstr "A copy of the extension (%1) is in a system folder (%2). The system copy will be preserved, but the new copy will be used."
 
-#: CRM/Extension/Downloader.php
+#: CRM/Extension/Manager.php
+msgid "Selected option value has been deleted."
+msgstr "Selected option value has been deleted."
+
+#: CRM/Extension/Browser.php
 msgid ""
-"WARNING: The downloader may be unable to download files which require HTTP "
-"redirection. This may be a configuration issue with PHP's open_basedir or "
-"safe_mode."
-msgstr "WARNING: The downloader may be unable to download files which require HTTP redirection. This may be a configuration issue with PHP's open_basedir or safe_mode."
+"The CiviCRM public extensions directory at %1 could not be contacted - "
+"please check your webserver can make external HTTP requests or contact "
+"CiviCRM team on <a href=\"http://forum.civicrm.org/\">CiviCRM forum</a>."
+msgstr "The CiviCRM public extensions directory at %1 could not be contacted - please check your webserver can make external HTTP requests or contact CiviCRM team on <a href=\"http://forum.civicrm.org/\">CiviCRM forum</a>."
