po: update po/es_ES/menu.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/es_ES/menu.po
+++ b/po/es_ES/menu.po
@@ -25,9 +25,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-03-16 23:56+0000\n"
-"Last-Translator: piuser8 YT <piuser9@gmail.com>\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:10+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -144,8 +144,8 @@ msgid "Case Activity"
 msgstr "Actividad del caso"
 
 msgctxt "menu"
-msgid "Case Report"
-msgstr "Informe de casos"
+msgid "Case Activity Audit"
+msgstr "Auditoría de la actividad de los casos "
 
 msgctxt "menu"
 msgid "Case Custom Set"
@@ -164,8 +164,8 @@ msgid "Assign to Another Client"
 msgstr "Asignar a otro cliente"
 
 msgctxt "menu"
-msgid "Build Activity To Case"
-msgstr "Basar actividad en caso"
+msgid "File on Case"
+msgstr "Archivo de caso"
 
 msgctxt "menu"
 msgid "Case Details"
@@ -189,10 +189,6 @@ msgstr "Estados de casos"
 msgctxt "menu"
 msgid "Encounter Mediums"
 msgstr "Encuentro con Medios"
-
-msgctxt "menu"
-msgid "Change Activity Status"
-msgstr "Cambiar el estado de la actividad"
 
 msgctxt "menu"
 msgid "CiviContribute Dashboard"
@@ -267,6 +263,10 @@ msgctxt "menu"
 msgid "Financial Types"
 msgstr "Tipos de financiación"
 
+msgctxt "menu"
+msgid "New Payment"
+msgstr "Nuevo pago "
+
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Financial Accounts"
@@ -284,9 +284,15 @@ msgstr "Tarjetas de crédito aceptadas"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Soft Credit Types"
+msgstr "Tipo de créditos blandos"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Contributions"
 msgstr "Contribuciones"
 
+#: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Recurring Contributions"
 msgstr "Aportaciones periódicas"
@@ -337,6 +343,23 @@ msgstr "Lotes de contabilidad"
 msgctxt "menu"
 msgid "Accounting Batch Export"
 msgstr "Exportar lote de contabilidad"
+
+msgctxt "menu"
+msgid "View Payment"
+msgstr "Ver pago"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "CiviContribute Component Settings"
+msgstr "Opciones del Componente CiviEvent"
+
+msgctxt "menu"
+msgid "PDF Invoice"
+msgstr "Factura PDF"
+
+msgctxt "menu"
+msgid "Email Invoice"
+msgstr "Factura e-mail"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -490,6 +513,11 @@ msgstr "Preferencias de Búsqueda"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Date Preferences"
+msgstr "Preferencias de Fechas"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Navigation Menu"
 msgstr "Menu de navegación"
 
@@ -523,10 +551,6 @@ msgctxt "menu"
 msgid "Schedule Reminders"
 msgstr "Recordatorios programados"
 
-msgctxt "menu"
-msgid "This should never be seen"
-msgstr "Esto no debería verse nunca"
-
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Preferred Communication Methods"
@@ -544,6 +568,11 @@ msgstr "Formatos de Impresión de Páginas (PDF)"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Communication Style Options"
+msgstr "Opciones de estilos de comunicación"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Email Greeting Formats"
 msgstr "Formatos de Saludos de E-mail"
 
@@ -557,9 +586,10 @@ msgctxt "menu"
 msgid "Addressee Formats"
 msgstr "Formatos de Destinatarios"
 
+#: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Languages, Currency, Location"
-msgstr "Idiomas, Moneda y Localización"
+msgid "Languages, Currency, Locations"
+msgstr "Idiomas, Moneda, Localizaciones"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -710,10 +740,6 @@ msgid "Administer CiviCRM"
 msgstr "Administrar CiviCRM"
 
 msgctxt "menu"
-msgid "Option Values"
-msgstr "Valores de Opciones"
-
-msgctxt "menu"
 msgid "Price Sets"
 msgstr "Tarifas"
 
@@ -781,10 +807,6 @@ msgstr "Constructor de Búsquedas"
 msgctxt "menu"
 msgid "Custom Searches"
 msgstr "Búsquedas personalizadas"
-
-msgctxt "menu"
-msgid "Simple Search"
-msgstr "Búsqueda Sencilla"
 
 msgctxt "menu"
 msgid "New Contact"
@@ -876,6 +898,10 @@ msgid "CiviCRM Blog"
 msgstr "Blog de CiviCRM"
 
 msgctxt "menu"
+msgid "CiviCRM Getting Started"
+msgstr ""
+
+msgctxt "menu"
 msgid "Case Dashlet"
 msgstr "'Dashlets' de Casos"
 
@@ -930,6 +956,10 @@ msgid "Import Activities"
 msgstr "Importar Actividades"
 
 msgctxt "menu"
+msgid "Import Multi-value Custom Data"
+msgstr "Importar campos personalizados multi-valor"
+
+msgctxt "menu"
 msgid "Upgrade CiviCRM"
 msgstr "Actualizar CiviCRM"
 
@@ -966,12 +996,16 @@ msgid "Browse Uploaded files"
 msgstr "Explorar Archivos Subidos"
 
 msgctxt "menu"
-msgid "Delete file"
-msgstr "Eliminar archivo"
+msgid "Delete File"
+msgstr "Borrar Archivo"
 
 msgctxt "menu"
 msgid "Log out"
 msgstr "Salir"
+
+msgctxt "menu"
+msgid "CiviCRM API"
+msgstr "API CiviCRM"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -985,6 +1019,10 @@ msgstr "QUnidad"
 msgctxt "menu"
 msgid "ProfileEditor"
 msgstr "PerfilEditor"
+
+msgctxt "menu"
+msgid "Confirm dates"
+msgstr "Confirmar Fechas"
 
 msgctxt "menu"
 msgid "CiviCRM Profile Create"
@@ -1081,6 +1119,10 @@ msgid "Event Online Registration"
 msgstr "Inscripción en Línea a Evento"
 
 msgctxt "menu"
+msgid "Repeat Event"
+msgstr "Repetir Evento"
+
+msgctxt "menu"
 msgid "Conference Slots"
 msgstr "Ubicación de la conferencia"
 
@@ -1114,6 +1156,10 @@ msgstr "Eliminar del Carrito"
 msgctxt "menu"
 msgid "View Cart"
 msgstr "Ver Carrito"
+
+msgctxt "menu"
+msgid "Change Registration Selections"
+msgstr "Cambiar las selecciones de registro"
 
 msgctxt "menu"
 msgid "CiviGrant Dashboard"
@@ -1168,8 +1214,8 @@ msgid "Resubscribe"
 msgstr "Volver a Suscribirse"
 
 msgctxt "menu"
-msgid "Optout"
-msgstr "No participar"
+msgid "Opt-out"
+msgstr "Excluirse"
 
 msgctxt "menu"
 msgid "Confirm"
@@ -1304,6 +1350,11 @@ msgstr "Listado de Informes"
 msgctxt "menu"
 msgid "CiviCRM News"
 msgstr "Noticias de CiviCRM"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Getting Started"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1442,6 +1493,16 @@ msgstr "Buscar SMS masivo"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "New A/B Test"
+msgstr "Nuevo test A/B"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Manage A/B Tests"
+msgstr "Gestionar tests A/B"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Membership Reports"
 msgstr "Informes de Miembros"
 
@@ -1547,11 +1608,6 @@ msgstr "Localización"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Languages, Currency, Locations"
-msgstr "Idiomas, Moneda, Localizaciones"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
 msgid "Preferred Language Options"
 msgstr "Opciones de Idioma Preferido"
 
@@ -1569,6 +1625,11 @@ msgstr "Permisos (Control de Acceso)"
 msgctxt "menu"
 msgid "System Settings"
 msgstr "Opciones del Sistema"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Connections"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1637,6 +1698,11 @@ msgstr "CiviGrant"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Grant Status"
+msgstr "Estado de la Subvención"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "CiviMember"
 msgstr "CiviMember"
 
@@ -1647,8 +1713,13 @@ msgstr "Todos los informes"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Help"
+msgid "Support"
 msgstr "Ayuda"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Get started"
+msgstr "Empezar"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1657,18 +1728,43 @@ msgstr "Documentación"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Community Forums"
-msgstr "Foros de CiviCRM"
+msgid "Ask a question"
+msgstr "Preguntar"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Participate"
-msgstr "Participar"
+msgid "Get expert help"
+msgstr "Conseguir ayuda de expertos"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "About"
+msgid "About CiviCRM"
 msgstr "Acerca de CiviCRM"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Register your site"
+msgstr "Registrar tu sitio"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Join CiviCRM"
+msgstr "Unirte a CiviCRM"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Developer"
+msgstr "Desarrollador"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "API Explorer"
+msgstr "Explorador API"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Developer Docs"
+msgstr "Documentos del desarrollador"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1895,6 +1991,11 @@ msgstr "Provee detalles de transacciones para todas las contribuciones y pagos, 
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Provides information about the status of recurring contributions"
+msgstr "Ofrece información sobre el estado de las contribuciones recurrentes"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Membership Summary"
 msgstr "Resumen de miembros"
 
@@ -2064,144 +2165,69 @@ msgid ""
 "Detailed report for canvassing, phone-banking, walk lists or other surveys."
 msgstr "Reporte detallado para prospección, llamadas bancarias, listas de espera y otras encuestas. "
 
+#: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Case Activity Audit"
-msgstr "Auditoría de la actividad de los casos "
+msgid "Payment Methods"
+msgstr ""
 
 msgctxt "menu"
-msgid "New Payment"
-msgstr "Nuevo pago "
+msgid "Configure CKEditor"
+msgstr ""
+
+msgctxt "menu"
+msgid "Batch Merge Duplicate Contacts"
+msgstr ""
+
+msgctxt "menu"
+msgid "Insert CiviCRM Content"
+msgstr ""
+
+msgctxt "menu"
+msgid "Self-service Registration Update"
+msgstr ""
+
+msgctxt "menu"
+msgid "Self-service Registration Transfer"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Soft Credit Types"
-msgstr "Tipo de créditos blandos"
-
-msgctxt "menu"
-msgid "View Payment"
-msgstr "Ver pago"
+msgid "System Status"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Communication Style Options"
-msgstr "Opciones de estilos de comunicación"
-
-msgctxt "menu"
-msgid "Import Multi-value Custom Data"
-msgstr "Importar campos personalizados multi-valor"
-
-msgctxt "menu"
-msgid "Change Registration Selections"
-msgstr "Cambiar las selecciones de registro"
+msgid "Components"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Grant Status"
-msgstr "Estado de la Subvención"
+msgid "Extensions"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Developer"
-msgstr "Desarrollador"
+msgid "Activity Details"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "API Explorer"
-msgstr "Explorador API"
+msgid "Activity Summary"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Developer Docs"
-msgstr "Documentos del desarrollador"
-
-msgctxt "menu"
-msgid "File on Case"
-msgstr "Archivo de caso"
+msgid "Shows activity statistics by type / date"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "CiviContribute Component Settings"
-msgstr "Opciones del Componente CiviEvent"
-
-msgctxt "menu"
-msgid "PDF Invoice"
-msgstr "Factura PDF"
-
-msgctxt "menu"
-msgid "Email Invoice"
-msgstr "Factura e-mail"
+msgid "Pledge Detail"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Date Preferences"
-msgstr "Preferencias de Fechas"
-
-msgctxt "menu"
-msgid "Delete File"
-msgstr "Borrar Archivo"
-
-msgctxt "menu"
-msgid "CiviCRM API"
-msgstr "API CiviCRM"
-
-msgctxt "menu"
-msgid "Confirm dates"
-msgstr "Confirmar Fechas"
-
-msgctxt "menu"
-msgid "Repeat Event"
-msgstr "Repetir Evento"
-
-msgctxt "menu"
-msgid "Opt-out"
-msgstr "Excluirse"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "New A/B Test"
-msgstr "Nuevo test A/B"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Manage A/B Tests"
-msgstr "Gestionar tests A/B"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Support"
-msgstr "Ayuda"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Get started"
-msgstr "Empezar"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Ask a question"
-msgstr "Preguntar"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Get expert help"
-msgstr "Conseguir ayuda de expertos"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "About CiviCRM"
-msgstr "Acerca de CiviCRM"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Register your site"
-msgstr "Registrar tu sitio"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Join CiviCRM"
-msgstr "Unirte a CiviCRM"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Provides information about the status of recurring contributions"
-msgstr "Ofrece información sobre el estado de las contribuciones recurrentes"
+msgid ""
+"List of pledges including amount pledged, pledge status, next payment date, "
+"balance due, total amount paid etc."
+msgstr ""
